[SELC-7753] New sendDelegationEvents service
